Fix card text and list title overflow problem

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -40,5 +40,6 @@ $card-border-radius: 3px;
     font-size: $card-font-size;
     font-weight: normal;
     line-height: 1.9rem;
+    word-break: break-word;
   }
 }
