--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -54,6 +54,7 @@ $scrollbar-thumb-bg-color: #c1c6c9;
       font-size: $list-header-font-size;
       font-weight: bold;
       line-height: $list-header-line-height;
+      word-break: break-word;
     }
   }
 
